# baichuan_cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yaml  release.yaml
src/: api.rs  lib.rs
