[package]
name = "baichuan_cli"
version = "0.1.1"
edition = "2021"
authors = ["Jiayu Liu <jiayu@blacklake.cn>"]
license = "Apache-2.0"
keywords = ["Baichuan", "LLM", "CLI", "clap", "Chatbot"]

[dependencies]
chrono = "^0.4.31"
clap = { version = "^4.4.7", features = ["derive", "env"] }
env_logger = "^0.10.0"
log = "^0.4.20"
md5 = "^0.7.0"
reqwest = { version = "^0.11.22", features = ["json"] }
rustyline = "^12.0.0"
serde = { version = "^1.0.190", features = ["derive"] }
serde_json = "^1.0.107"
serde_repr = "^0.1.16"
tokio = { version = "^1.33.0", features = ["full"] }
ulid = "^1.1.0"


[[bin]]
name = "bc-cli"
path = "src/bin/main.rs"
